fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -57,7 +57,7 @@
     line-height: 36px;
 }
 
-.author-container .clearfix {
+.author-container .author-info-description:after {
 	margin-top: 30px;
 	display: block;
 	clear: both;
